# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1120 2011/04/08 12:50:01 mpagano Exp $

*git-sources-2.6.39_rc2-r1 (08 Apr 2011)

  08 Apr 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.39_rc2-r1.ebuild:
  Version bump

*git-sources-2.6.39_rc2 (06 Apr 2011)

  06 Apr 2011; Mike Pagano <mpagano@gentoo.org> -git-sources-2.6.38-r12.ebuild,
  -git-sources-2.6.38-r13.ebuild, -git-sources-2.6.38-r14.ebuild,
  -git-sources-2.6.38-r15.ebuild, -git-sources-2.6.38-r16.ebuild,
  -git-sources-2.6.38-r17.ebuild, -git-sources-2.6.38-r18.ebuild,
  -git-sources-2.6.38-r19.ebuild, -git-sources-2.6.38-r20.ebuild,
  -git-sources-2.6.38-r21.ebuild, +git-sources-2.6.39_rc2.ebuild:
  Version bump and old version cleanup

*git-sources-2.6.39_rc1-r5 (05 Apr 2011)

  05 Apr 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.39_rc1-r5.ebuild:
  Version bump

*git-sources-2.6.39_rc1-r4 (05 Apr 2011)

  05 Apr 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.39_rc1-r4.ebuild:
  Version bump

*git-sources-2.6.39_rc1-r3 (02 Apr 2011)

  02 Apr 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.39_rc1-r3.ebuild:
  Version bump

*git-sources-2.6.39_rc1-r2 (01 Apr 2011)

  01 Apr 2011; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.39_rc1-r2.ebuild:
  Version bump

*git-sources-2.6.39_rc1-r1 (31 Mar 2011)

  31 Mar 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.39_rc1-r1.ebuild:
  Version bump

*git-sources-2.6.39_rc1 (29 Mar 2011)

  29 Mar 2011; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.39_rc1.ebuild:
  Version bump

  29 Mar 2011; Mike Pagano <mpagano@gentoo.org> -git-sources-2.6.38-r1.ebuild,
  -git-sources-2.6.38-r2.ebuild, -git-sources-2.6.38-r3.ebuild,
  -git-sources-2.6.38-r4.ebuild, -git-sources-2.6.38-r5.ebuild,
  -git-sources-2.6.38-r6.ebuild, -git-sources-2.6.38-r7.ebuild,