@@ -9,6 +9,7 @@ DIST patch-2.6.39-rc1-git4.bz2 79070 RMD160 1e6e8637e3d2702393bdd65f0fc65dde6741
 DIST patch-2.6.39-rc1-git5.bz2 98393 RMD160 8453d87072c50398091900caf5663205f680f121 SHA1 75dc32685143805584d3148d23e997bc324ec238 SHA256 23ac890ef24d8d352614ae2ee3ddc41b5cd13e3e52ad13c62dda4444f6d88011
 DIST patch-2.6.39-rc1.bz2 9410714 RMD160 6c4495269ae54322ba29fa9b0ee584d8c64e2a05 SHA1 b15008055207b73a5a13efc71e21cfa7da26670c SHA256 312fd6ef08f4377764d96a32aece42fda36209548c25e9db20824ecc0a65a4fb
 DIST patch-2.6.39-rc2-git1.bz2 544859 RMD160 b6bc16be4f3ef1efac41c40b73333870b3e01e88 SHA1 a256a43326b01add86d63b5105a039596acb0f80 SHA256 f7c53f927b797862e9f7ca2e45369a20977be4cc98a136159bae0bf7f629987b
+DIST patch-2.6.39-rc2-git2.bz2 547816 RMD160 edcb11e7cb90f689ba83f9f636e55b81ac59b1aa SHA1 599f0cc1b65e50c8f4c04237808d3933c5808d74 SHA256 d27df77a96224ffefa5c6044cc9dc2e7cbb399566ac2613dbc90cc7b0d1507b0
 DIST patch-2.6.39-rc2.bz2 9554973 RMD160 47fbe71a99903aface6ebf3df95dfbea97a77614 SHA1 76d8a4d9a9cf89a24d571ac24e2443feca49e54d SHA256 60f48256287cb1f26d78a28291fb950d8558a8bb56ba5ee0bd87d87c3d7e6a34
 EBUILD git-sources-2.6.39_rc1-r1.ebuild 1273 RMD160 149b35189011fc6eeeebe487e200f806ff6885ce SHA1 c00d9fb084794eb03ea8d3d986290297ccfd02e9 SHA256 973577031dca127d3d7d89c5a199f8c3e24f2285ea9468ca0a17bb186a61561f
 EBUILD git-sources-2.6.39_rc1-r2.ebuild 1273 RMD160 b205b37ebade5819d3939c9de58db3c710303c4a SHA1 1591f8f1cf3a479ff710bd5d9c18a4beeaa63cd3 SHA256 f1c4476ecf82b38ec7ce9b6597ff7d42eadd31bdcab1822e2e904734a2850ce1
@@ -17,13 +18,14 @@ EBUILD git-sources-2.6.39_rc1-r4.ebuild 1273 RMD160 826a6ea1a93061614458407508da
 EBUILD git-sources-2.6.39_rc1-r5.ebuild 1273 RMD160 90bc277f77137f4e2ffd55e458e5ac8277209ab6 SHA1 f0b468bd68b679d855a164f3f30ebea3051a1056 SHA256 2c143c98b126c0400022f481e9bef6a112178741b46a95a7c3bcafaf117f3111
 EBUILD git-sources-2.6.39_rc1.ebuild 1270 RMD160 cf8aab0ffe9490fd093ff970f1eeaff0b4151636 SHA1 0f9ec0e74b39402d630ef778c9a40f11d712a195 SHA256 beede4a7b060bd5ffdaa860bb74e0b656a6319ba6c820ef79c54d71b7c1274f0
 EBUILD git-sources-2.6.39_rc2-r1.ebuild 1273 RMD160 3480903b61628a60e4769303c54f3747fdbebd41 SHA1 e6f60e378d4b189fb29af6f318c0d68ade85cc82 SHA256 5e6f846d8acafa19b4d6c1c81820e91f9cb8e1d39c93cc7f2bd1fbd8bd05caeb
+EBUILD git-sources-2.6.39_rc2-r2.ebuild 1273 RMD160 48fa119e52c94a83606f7f9d617e82709a83bc72 SHA1 ced97db8e88cdf6af9f2ecd72259b760e0f8ab25 SHA256 5aa89afa11907410c285206d35ddd1dde342e64703c75ec81705b5d54cccb4b5
 EBUILD git-sources-2.6.39_rc2.ebuild 1270 RMD160 9d561448e97911bc5fd42c4617b6fffbc117f33d SHA1 ffbc115477cc70661b6577f0ab86cd68bf9235ab SHA256 e5ae54324076c7ef50adef0acf32cdd7becc36a52b106014438aac408adc89e5
-MISC ChangeLog 215247 RMD160 c618ea81ddd761246c6e2fbd338af4b4af0b473c SHA1 2ac7c24f51210f778523b959385084421d3d6258 SHA256 b92cd240ddaba4937c3d90c7d8baf20b1b4d8a44030ad2c2552d0926d138231c
+MISC ChangeLog 215393 RMD160 01d0a195f49ddb2649b955f4a18f8fff5e6162a7 SHA1 e8da5d9c9af25c8960f732641306d31aca1513d9 SHA256 ce2e3deb590a8a7ae4075d5a25dda40446c247a9a1afdfe3534dbeda6434f718
 MISC metadata.xml 460 RMD160 a96aabd76f2d713116e9c2b131da3a5a2b09065f SHA1 c050d9450624357dfd0db2b82e16717da7cbca29 SHA256 1cb771bf1cf049ed4ecb8b27e0efd74c765fb016a024403abbfa8a956b842b92
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk2fPP8ACgkQPDPGULV25ONKqwCdGAd9CcMw8d6ktWoUUhp9flqP
-ougAn2utHnVePXx9/oMbrmID6FIjR4qX
-=co5c
+iEYEARECAAYFAk2fuTQACgkQPDPGULV25ON4XwCg264TA2HD3pyl7TAs4hF1Gqzd
+v64AnjXOtefGJUJCTSkexN5kW4mrQDGW
+=aq9D
 -----END PGP SIGNATURE-----
