@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1120 2011/04/08 12:50:01 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1121 2011/04/09 01:41:00 mpagano Exp $
+
+*git-sources-2.6.39_rc2-r2 (09 Apr 2011)
+
+  09 Apr 2011; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.39_rc2-r2.ebuild:
+  Version bump
 
 *git-sources-2.6.39_rc2-r1 (08 Apr 2011)
 
